# codex

./: .gitignore
codex-rs/: .gitignore  Cargo.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: lib.rs  (+3 more)
codex-rs/cli/: Cargo.toml
codex-rs/context-harness/: BUILD.bazel  Cargo.toml  EVAL_REPORT.md
codex-rs/context-harness/src/: agent_eval.rs  assembler.rs  budgeter.rs  classifier.rs  decision_log.rs  eval.rs  lib.rs  metrics.rs  normalize.rs  ownership.rs  packet.rs  pipeline.rs  post_failure.rs  prompt_paths.rs  prompt_visibility.rs  render_level.rs  renderer.rs  repair_hint.rs  run_memory.rs  selection.rs  task_scope.rs  task_terms.rs  test_select.rs
codex-rs/context-harness/tests/: agent_eval.rs  eval_codex_fixtures.rs  eval_fixtures.rs  m11_2_compression.rs  m11_3_task_scope.rs  m11_relevance.rs  metrics_eval.rs  packet_golden.rs  prompt_paths.rs  ri_packet_regressions.rs
codex-rs/context-harness/tests/fixtures/: agent_eval_tasks.json  agent_eval_tasks_agent_eval_excluded_only.json  agent_eval_tasks_area_alias_concept_only.json  agent_eval_tasks_area_package_alias_only.json  agent_eval_tasks_codex_miss_classes.json  agent_eval_tasks_codex_repeat.json  agent_eval_tasks_codex_session.json  agent_eval_tasks_directive_marker_only.json  agent_eval_tasks_rate_limit_only.json  agent_eval_tasks_renderer_doc_noharm.json  agent_eval_tasks_ri_hard_v1.json  agent_eval_tasks_ri_v1.json  repo_map_codex_harness.json  repo_map_restaurant.json  tasks.json  tasks_codex.json  tasks_codex_live.json  tasks_synthetic_restaurant.json
codex-rs/context-harness/tests/fixtures/e2e_python_calculator/: AGENTS.md  pyproject.toml
codex-rs/context-harness/tests/fixtures/e2e_python_calculator/tests/: test_calculator.py
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/ext/repo-intelligence/: BUILD.bazel  Cargo.toml
codex-rs/ext/repo-intelligence/examples/: bench_contribute.rs
codex-rs/ext/repo-intelligence/src/: extension.rs  lib.rs  run_memory_bridge.rs  user_input.rs
codex-rs/ext/repo-intelligence/tests/: contributor_injection.rs
codex-rs/large-read-proxy/: BUILD.bazel  Cargo.toml
codex-rs/large-read-proxy/examples/: render_read.rs
codex-rs/large-read-proxy/src/: command_classifier.rs  command_classifier_tests.rs  decide_tests.rs  lib.rs  renderer.rs  slice.rs  slice_tests.rs
codex-rs/repo-index/: BUILD.bazel  Cargo.toml
codex-rs/repo-index/src/: area_map.rs  builder.rs  cache.rs  churn.rs  command_map.rs  lib.rs  repo_map.rs  signals.rs  test_map.rs  walk.rs
codex-rs/repo-index/src/extractors/: mod.rs
codex-rs/scripts/: harness-agent-eval.sh  harness-e2e-oss-python.sh
codex-rs/search-proxy/: BUILD.bazel  Cargo.toml  MERGE_CANDIDATE.md  MVP_RESULT.md  PR_PROPOSAL.md
codex-rs/search-proxy/examples/: classify_run.rs  render_query.rs  render_run8.rs
codex-rs/search-proxy/src/: command_classifier.rs  command_classifier_tests.rs  evidence.rs  evidence_builder.rs  evidence_builder_tests.rs  evidence_renderer.rs  file_class.rs  lib.rs  relevance.rs  rg_json.rs  rg_json_tests.rs  rg_runner.rs
codex-rs/verification/: BUILD.bazel  Cargo.toml
codex-rs/verification/src/: command_exec.rs  eval.rs  lib.rs  output.rs  planner.rs  python_rules.rs  report_integration.rs  rules.rs  runner.rs  selector.rs
codex-rs/verification/tests/: plan_eval.rs  plan_python.rs  report_integration.rs
codex-rs/verification/tests/fixtures/: plan_codex.json  plan_python_calculator.json  report_failed.json
docs/: reactive-mediation-review.md  reactive-mediation.md
research-bundle/: BUNDLE_README.md  RUN_INDEX.md
research-bundle/code-snapshot/: SNAPSHOT_COMMIT.txt
research-bundle/ri-packets/: run5-area-package-alias.txt  run8-agent-eval-excluded.txt
research-bundle/scripts/: build_summary_csv.py  extract_packets.py
(+163 files in other folders)
