[package]
name = "codex-context-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_context_harness"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-protocol = { workspace = true }
codex-repo-index = { path = "../repo-index" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
