[package]
name = "codex-repo-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_repo_index"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-git-utils = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
