[package]
name = "codex-verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_verification"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-context-harness = { workspace = true }
codex-repo-index = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
