[package]
edition.workspace = true
license.workspace = true
name = "codex-repo-intelligence-extension"
version.workspace = true

[lib]
name = "codex_repo_intelligence_extension"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-context-harness = { workspace = true }
codex-core = { workspace = true }
codex-extension-api = { workspace = true }
codex-features = { workspace = true }
codex-repo-index = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
codex-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
